@@ -10,10 +10,11 @@
 	<artifactId>org.eclipse.recommenders.tests.rcp.codecompletion.calls</artifactId>
 	<version>0.2.0-SNAPSHOT</version>
 	<packaging>eclipse-test-plugin</packaging>
-	
+
 	<properties>
 		<emma.filter>+org.eclipse.recommenders.internal.rcp.codecompletion.calls.*,+org.eclipse.recommenders.rcp.codecompletion.calls.*</emma.filter>
 		<eclemma.instrument.bundles>org.eclipse.recommenders.rcp.codecompletion.calls</eclemma.instrument.bundles>
+		<ui.test.vmargs>-Xmx512m -XX:MaxPermSize=256m</ui.test.vmargs>
 	</properties>
 	<profiles>
 		<profile>
@@ -21,29 +22,30 @@
 			<build>
 				<plugins>
 					<plugin>
-				       <groupId>org.sonatype.tycho</groupId>
-				       <artifactId>maven-osgi-test-plugin</artifactId>
-				       <version>${tycho-version}</version>
-				       <configuration>
-				       		<testSuite>org.eclipse.recommenders.tests.rcp.codecompletion.calls</testSuite>
-          					<testClass>org.eclipse.recommenders.tests.rcp.codecompletion.calls.AllTestSuite</testClass>
-				        	<useUIHarness>true</useUIHarness>
-					         <useUIThread>false</useUIThread>
-					         <product>org.eclipse.sdk.ide</product>
-					         <application>org.eclipse.ui.ide.workbench</application>
-					         <dependencies>
-					           <dependency>
-					             <type>p2-installable-unit</type>
-					             <artifactId>org.eclipse.sdk.ide</artifactId>
-					             <version>0.0.0</version>
-					           </dependency>
-					          </dependencies>
-				       </configuration>
-				     </plugin>
+						<groupId>org.sonatype.tycho</groupId>
+						<artifactId>maven-osgi-test-plugin</artifactId>
+						<version>${tycho-version}</version>
+						<configuration>
+							<testSuite>org.eclipse.recommenders.tests.rcp.codecompletion.calls</testSuite>
+							<testClass>org.eclipse.recommenders.tests.rcp.codecompletion.calls.AllTestSuite</testClass>
+							<useUIHarness>true</useUIHarness>
+							<useUIThread>true</useUIThread>
+							<product>org.eclipse.sdk.ide</product>
+							<argLine>${ui.test.vmargs}</argLine>
+							<application>org.eclipse.ui.ide.workbench</application>
+							<dependencies>
+								<dependency>
+									<type>p2-installable-unit</type>
+									<artifactId>org.eclipse.sdk.ide</artifactId>
+									<version>0.0.0</version>
+								</dependency>
+							</dependencies>
+						</configuration>
+					</plugin>
 				</plugins>
 			</build>
 		</profile>
-	
+
 		<profile>
 			<id>developer</id>
 			<activation>
@@ -52,32 +54,45 @@
 			<build>
 				<plugins>
 					<plugin>
-				       <groupId>org.sonatype.tycho</groupId>
-				       <artifactId>maven-osgi-test-plugin</artifactId>
-				       <version>${tycho-version}</version>
-				       <configuration>
-				       		<testSuite>org.eclipse.recommenders.tests.rcp.codecompletion.calls</testSuite>
-          					<testClass>org.eclipse.recommenders.tests.rcp.codecompletion.calls.unit.UnitTestSuite</testClass>
-				       </configuration>
-				     </plugin>
+						<groupId>org.sonatype.tycho</groupId>
+						<artifactId>maven-osgi-test-plugin</artifactId>
+						<version>${tycho-version}</version>
+						<configuration>
+							<testSuite>org.eclipse.recommenders.tests.rcp.codecompletion.calls</testSuite>
+							<testClass>org.eclipse.recommenders.tests.rcp.codecompletion.calls.unit.UnitTestSuite</testClass>
+							<useUIHarness>true</useUIHarness>
+							<useUIThread>false</useUIThread>
+							<product>org.eclipse.sdk.ide</product>
+							<argLine>${ui.test.vmargs}</argLine>
+							<application>org.eclipse.ui.ide.workbench</application>
+							<dependencies>
+								<dependency>
+									<type>p2-installable-unit</type>
+									<artifactId>org.eclipse.sdk.ide</artifactId>
+									<version>0.0.0</version>
+								</dependency>
+							</dependencies>
+						</configuration>
+					</plugin>
 				</plugins>
 			</build>
 		</profile>
-	
+
 		<profile>
 			<id>coverage</id>
 			<build>
 				<plugins>
 					<plugin>
-				       <groupId>org.sonatype.tycho</groupId>
-				       <artifactId>maven-osgi-test-plugin</artifactId>
-				       <version>${tycho-version}</version>
-				       <configuration>
-				       		<testSuite>org.eclipse.recommenders.tests.rcp.codecompletion.calls</testSuite>
-          					<testClass>org.eclipse.recommenders.tests.rcp.codecompletion.calls.unit.UnitTestSuite</testClass>
-				       </configuration>
-				     </plugin>
-				     <plugin>
+						<groupId>org.sonatype.tycho</groupId>
+						<artifactId>maven-osgi-test-plugin</artifactId>
+						<version>${tycho-version}</version>
+						<configuration>
+							<testSuite>org.eclipse.recommenders.tests.rcp.codecompletion.calls</testSuite>
+							<testClass>org.eclipse.recommenders.tests.rcp.codecompletion.calls.unit.UnitTestSuite</testClass>
+							<argLine>${ui.test.vmargs}</argLine>
+						</configuration>
+					</plugin>
+					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-antrun-plugin</artifactId>
 						<dependencies>
